# voynich-term

./: Cargo.toml  README.md  config.toml
src/: app.rs  app_context.rs  cli.rs  commands.rs  input.rs  main.rs  root.rs  term.rs  theme.rs  widgets.rs
src/input/: allow_connection_input.rs  chat_input.rs  command_input.rs
src/widgets/: allow_connection_popup.rs  chat_input.rs  chat_panel.rs  chat_tabs.rs  command_popup.rs  status_bar.rs  system_messages_panel.rs  title_bar.rs  welcome_popup.rs
