[package]
name = "voynich-term"
version = "0.1.1"
edition = "2021"
description = "Terminal-ui for anonymous, end-to-end encrypted and authenticated chat using voynich"

[dependencies]
anyhow = "1.0.86"
better-panic = "0.3.0"
clap = { version = "4.5.4", features = ["cargo", "derive"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
futures-lite = "2.3.0"
lazy_static = "1.4.0"
rand = "0.8.5"
ratatui = "0.26.3"
tokio = { version = "1.38.0", features = ["full"] }
tor-client-lib = "0.2.1"
unicode-width = "0.1.13"
voynich = "0.1.1"
